--- a/index.html
+++ b/index.html
@@ -447,7 +447,67 @@
                     </div>
                 </div>
 
-                <div class="tab-pane py-3 fade-in" id="four" role="tabpanel" aria-labelledby="four-tab">
+                <div class="tab-pane py-3 fade-in .d-sm-none .d-md-block" id="four" role="tabpanel" aria-labelledby="four-tab">
+                    <h2 class="step-title fs-4 fw-bold mb-3 pb-2 text-md-start text-center px-2">Часто
+                        задаваемые вопросы</h2>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-6 my-2 my-md-3">
+                                <div
+                                    class="faq-item d-flex flex-column justify-content-center shadow card h-md-auto position-relative text-center p-4 rounded bg-white">
+                                    <h3 class="fs-5 fw-bolder mb-1 mt-4 mt-md-0">Сколько стоит доставка?</h3>
+                                    <p>Стоимость доставки зависит от стоимости заказанных товаров. От 5 до 10 %
+                                        процентов от стоимости, чем больше цена, тем меньше процент.</p>
+                                </div>
+                            </div>
+                            <div class="col-md-6 my-2 my-md-3">
+                                <div
+                                    class="faq-item d-flex flex-column justify-content-center shadow card h-md-auto position-relative text-center p-4 rounded bg-white">
+                                    <h3 class="fs-5 fw-bolder mb-1 mt-4 mt-md-0">Как отследить посылку?</h3>
+                                    <p>Вы можете отследить статус посылки, воспользовавшись сервисом
+                                        отслеживания на главной
+                                        странице нашего сайта.</p>
+                                </div>
+                            </div>
+                            <div class="col-md-6 my-2 my-md-3">
+                                <div
+                                    class="faq-item d-flex flex-column justify-content-center shadow card h-md-auto position-relative text-center p-4 rounded bg-white">
+                                    <h3 class="fs-5 fw-bolder mb-1 mt-4 mt-md-0">Как долго хранится посылка?</h3>
+                                    <p>Посылка хранится в пункте выдачи FTEK 7 календарных дней. По истечении
+                                        этого срока
+                                        наступает
+                                        "платное хранение".</p>
+                                </div>
+                            </div>
+                            <div class="col-md-6 my-2 my-md-3">
+                                <div
+                                    class="faq-item d-flex flex-column justify-content-center shadow card h-md-auto position-relative text-center p-4 rounded bg-white">
+                                    <h3 class="fs-5 fw-bolder mb-1 mt-4 mt-md-0">Какой срок доставки?</h3>
+                                    <p>1-2 дня (с момента поступления заказа с Avito)</p>
+                                </div>
+                            </div>
+                            <div class="col-md-6 my-2 my-md-3">
+                                <div
+                                    class="faq-item d-flex flex-column justify-content-center shadow card h-md-auto position-relative text-center p-4 rounded bg-white">
+                                    <h3 class="fs-5 fw-bolder mb-1 mt-4 mt-md-0">Как оплатить доставку?</h3>
+                                    <p>Оплата услуг доставки осуществляется получателем при получении в ПВЗ FTEK
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-md-6 my-2 my-md-3">
+                                <div
+                                    class="faq-item d-flex flex-column justify-content-center shadow card h-md-auto position-relative text-center p-4 rounded bg-white">
+                                    <h3 class="fs-5 fw-bolder mb-1 mt-4 mt-md-0">Как получать уведомления?</h3>
+                                    <p>Вы будете получать уведомления о статусе заказа на указанную в заявке
+                                        электронную
+                                        почту
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-pane py-3 fade-in  d-flex flex-column d-md-none align-items-center" id="four" role="tabpanel" aria-labelledby="four-tab">
                     <h2 class="step-title fs-4 fw-bold mb-3 pb-2 text-md-start text-center px-2">Часто
                         задаваемые вопросы</h2>
                     <div class="container">
